--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,14 @@ version = "0.0.1"
 edition = "2021"
 
 [dependencies]
-num-bigint = "0.4.4"
-num-traits = "0.2.18"
-num-integer = "0.1.46"
-clap = { version = "4.5.1", features = ["derive"] }
+clap = { version = "4.5.2", features = ["derive"] }
+
+[dependencies.rug]
+version = "1.24"
+default-features = false
+features = ["integer", "rational", "std"]
 
 [profile.release]
 panic = "abort"
 opt-level = 3
+debug = false
