--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.2", features = ["derive"] }
+num-prime = "0.4.3"
 
 [dependencies.rug]
 version = "1.24"
